sonarfix bugs